2011-03-10  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/toolbar.c:
   Correctly expand the menubar if the toolbar is appended to it but
   not visible (closes #3204955).


2011-03-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/geany.h:
   Fix wrong code example in the API docs
   (spotted by Matthew Brush, thanks).


2011-03-07  Colomban Wendling  <colomban(at)geany(dot)org>

 * tagmanager/mio/mio-memory.c:
   Import upstream MIO changes not to require a C99 compiler.


2011-03-06  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/symbols.c:
   When sorting tags by line, also sort by scope if line is the same, avoiding
   wrong sorting if a parent tag is on the same line than its children, and one
   of it's children would be sorted before alphabetically (closes #3193982).


2011-03-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/interface.c, geany.glade:
   Fix typo.
 * src/search.c:
   Remember Find and Replace options across restarts
   (patch by Dimitar Zhekov, thanks).
   Cleanup.
   Respect saved state of 'Case sensitive' option when using
   the 'Regular expressions' option as well.
 * plugins/export.c:
   Add option to insert line numbers (closes #3197150).
   Cleanup.
   Use the full filename and add the extension of the export format.
   Fix off-by-one bug which hidden the last empty line of a document.


2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>

 * configure.ac, wscript, makefile.win32, src/Makefile.am,
   src/makefile.win32, tagmanager/Makefile.am, tagmanager/c.c,
   tagmanager/entry.c, tagmanager/entry.h, tagmanager/fortran.c,
   tagmanager/get.c, tagmanager/get.h, tagmanager/js.c, tagmanager/lregex.c,
   tagmanager/makefile.win32, tagmanager/parse.c, tagmanager/read.c,
   tagmanager/read.h, tagmanager/sort.c, tagmanager/sql.c,
   tagmanager/strlist.c, tagmanager/mio/*:
   Move most of TagManager's I/O to MIO.
 * src/document.c:
   Enable in-memory tag parsing.